Created Detail Page for Maddi Bazzocco 2 3 4 5

--- a/maddi-bazzocco/photographs/coffee-and-sunshine.html
+++ b/maddi-bazzocco/photographs/coffee-and-sunshine.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Unsplash - Maddi Bazzocco</title>
+<title>Maddi Bazzocco - Coffee and Sunshine</title>
 <!-- InstanceEndEditable -->
     
     <!-- InstanceBeginEditable name="head" -->
@@ -21,9 +21,10 @@
 	
 <nav>
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-    <li class="breadcrumb-item active">Maddi Bazzocco</li>
+    <li class="breadcrumb-item"><a href="../index.html">Maddi Bazzocco</a></li>
+    <li class="breadcrumb-item active">Coffee and Sunshine</li>
     <!-- InstanceEndEditable -->
   </ol>
 </nav>
@@ -43,29 +44,89 @@
     </div>
     <div class="col-12 col-sm-6 col-md-9">
 	<!-- InstanceBeginEditable name="maddi-bazzocco-content" -->
-      <p>Maddi Bazzocco is a photographer from London. As someone who spent a semester abroad in London, I connected with her photos and her healthy, active lifestyle.</p>
-		<div class="card-columns">
-		<div class="card"> <a href="photographs/bentwood-breakfast.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543393786-6b9844cc148d" alt="Bentwood Breakfast"></a>
-  		</div>
-		<div class="card"> <a href="photographs/coffee-and-sunshine.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543393786-24e0a169cd81" alt="Coffee and Sunshine"></a>
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Photo Info
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Coffee and Sunshine</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+		<p>Published on November 28, 2018</p>
+		<div class="row">
+		  <div class="col-12 col-sm-3">
+			<div class="card">
+    			<img class="card-img-top" src="https://images.unsplash.com/photo-1543393786-24e0a169cd81" alt="Coffee and Sunshine">
+			</div>
+		  </div>
+		  <div class="col-12 col-sm-9">
+			<div class="row">
+		  	<dl class="col-4">
+				<dt>Views</dt>
+				<dd><strong>134,644</strong></dd>
+				<dd>+134,747 since last month</dd>
+		  	</dl>
+		  	<dl class="col-4">
+				<dt>Downloads</dt>
+				<dd><strong>592</strong></dd>
+				<dd>+591 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Likes</dt>
+				<dd><strong>42</strong></dd>
+				<dd>+42 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Make</dt>
+				<dd>Canon</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Model</dt>
+				<dd>Canon EOS 500D</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Focal Length</dt>
+				<dd>28.0mm</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Aperture</dt>
+				<dd>ƒ/5.0</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Shutter Speed</dt>
+				<dd>1/50s</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>ISO</dt>
+				<dd>100</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Dimensions</dt>
+				<dd>3168 × 4752</dd>
+		  	</dl>
+			</div>
+		  </div>
 		</div>
-		<div class="card"> <a href="photographs/simple-calendar-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543168256-4ae2229821f1" alt="Simple Calendar Photo"></a>
-		</div>
-		<div class="card"> <a href="photographs/girls-at-christmas.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543168256-8133cc8e3ee4" alt="Girls at Christmas"></a>
-		</div>
-		<div class="card"> <a href="photographs/gingerbread-men.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543168256-b0413f8c470c" alt="Gingerbread Men"></a>
-		</div>
-		<div class="card"> <a href="photographs/cat-eye-half-leopard-half-cat.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542990253-32ad80629545" alt="Cat Eye - Half Leopard, Half Cat"></a>
-		</div>
-		<div class="card"> <a href="photographs/sunglass-summer-relaxing-drink.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542990254-6a8126153b7a" alt="Sunglass, summer, relaxing and drink"></a>
-		</div>
-		<div class="card"> <a href="photographs/pastel-hearts.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542990254-cc9e3baecfaf" alt="Pastel Hearts"></a>
-		</div>
-		<div class="card"> <a href="photographs/my-girls.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542990254-ac254676f83d" alt="My Girls"></a>
-		</div>
-		<div class="card"> <a href="photographs/working-from-home.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542897477-58f94fbf569f" alt="Working From Home"></a>
-		</div>
-	</div>
+      </div> 
+      <div class="modal-footer">
+		<a href="https://unsplash.com/photos/5o4WVPa0qGQ" target="_blank">Photo Source</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>		
+<h2>Bentwood Breakfast</h2>
+	<p>I like this photo because it includes coffee and sunflowers. Two things that I love.</p>
+<div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1543393786-24e0a169cd81" alt="Coffee and Sunshine">
+</div>
     <!-- InstanceEndEditable --></div>
   </div>
   
