Created Detail Page for Maddi Bazzocco 6

--- a/maddi-bazzocco/photographs/long-distance-relationship.html
+++ b/maddi-bazzocco/photographs/long-distance-relationship.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Maddi Bazzocco - Simple Calendar Photo</title>
+<title>Maddi Bazzocco - Long Distance Relationship</title>
 <!-- InstanceEndEditable -->
     
     <!-- InstanceBeginEditable name="head" -->
@@ -24,7 +24,7 @@
     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <!-- InstanceBeginEditable name="breadcrumb-trail" -->
     <li class="breadcrumb-item"><a href="../index.html">Maddi Bazzocco</a></li>
-    <li class="breadcrumb-item active">Simple Calendar Photo</li>
+    <li class="breadcrumb-item active">Long Distance Relationship</li>
     <!-- InstanceEndEditable -->
   </ol>
 </nav>
@@ -53,35 +53,35 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Simple Calendar Photo</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Long Distance Relationship</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-		<p>Published on November 25, 2018</p>
+		<p>Published on November 28, 2018</p>
 		<div class="row">
 		  <div class="col-12 col-sm-3">
 			<div class="card">
-    			<img class="card-img-top" src="https://images.unsplash.com/photo-1543168256-4ae2229821f1" alt="Simple Calendar Photo">
+    			<img class="card-img-top" src="https://images.unsplash.com/photo-1542990253-32ad80629545" alt="Long Distance Relationship">
 			</div>
 		  </div>
 		  <div class="col-12 col-sm-9">
 			<div class="row">
 		  	<dl class="col-4">
 				<dt>Views</dt>
-				<dd><strong>98,451</strong></dd>
-				<dd>+94,870 since last month</dd>
+				<dd><strong>10,631</strong></dd>
+				<dd>+10,646 since last month</dd>
 		  	</dl>
 		  	<dl class="col-4">
 				<dt>Downloads</dt>
-				<dd><strong>1,345</strong></dd>
-				<dd>+1,313 since last month</dd>
+				<dd><strong>60</strong></dd>
+				<dd>+59 since last month</dd>
 		  	</dl>
 			<dl class="col-4">
 				<dt>Likes</dt>
-				<dd><strong>44</strong></dd>
-				<dd>+43 since last month</dd>
+				<dd><strong>6</strong></dd>
+				<dd>+6 since last month</dd>
 		  	</dl>
 			<dl class="col-4">
 				<dt>Camera Make</dt>
@@ -97,11 +97,11 @@
 		  	</dl>
 			<dl class="col-4">
 				<dt>Aperture</dt>
-				<dd>ƒ/4.5</dd>
+				<dd>ƒ/3.5</dd>
 		  	</dl>
 			<dl class="col-4">
 				<dt>Shutter Speed</dt>
-				<dd>1/125s</dd>
+				<dd>1/80s</dd>
 		  	</dl>
 			<dl class="col-4">
 				<dt>ISO</dt>
@@ -109,23 +109,23 @@
 		  	</dl>
 			<dl class="col-4">
 				<dt>Dimensions</dt>
-				<dd>3168 × 4531</dd>
+				<dd>2274 × 2962</dd>
 		  	</dl>
 			</div>
 		  </div>
 		</div>
       </div> 
       <div class="modal-footer">
-		<a href="https://unsplash.com/photos/waNAJOI7Jz8" target="_blank">Photo Source</a>
+		<a href="https://unsplash.com/photos/1xkfdYwQ67U" target="_blank">Photo Source</a>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
 </div>		
-<h2>Simple Calendar Photo</h2>
-	<p>I love the simplicity of this photo. It reminds me of the beginning to a new school year.</p>
+<h2>Long Distance Relationship</h2>
+	<p>I love this photo because of the quote. It's so cute and the organization of it is equally as adorable.</p>
 <div class="card">
-    <img class="card-img-top" src="https://images.unsplash.com/photo-1543168256-4ae2229821f1" alt="Simple Calendar Photo">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1542990253-32ad80629545" alt="Long Distance Relationship">
 </div>
     <!-- InstanceEndEditable --></div>
   </div>
