Created Tom Sodoge Page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="card-body">
       <h5 class="card-title">Tom Sodoge</h5>
       <p class="card-text">Photographer and designer from the heart of Germany.</p>
-	  <a href="#">Photo Gallery</a>
+	  <a href="tom sodoge/index.html">Photo Gallery</a>
     </div>
   </div>
 </div>
