--- a/tom sodoge/index.html
+++ b/tom sodoge/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/tom-sodoge.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -10,21 +10,21 @@
 <!-- InstanceBeginEditable name="doctitle" -->
 <title>Unsplash - Tom Sodoge</title>
 <!-- InstanceEndEditable -->
+    
     <!-- InstanceBeginEditable name="head" -->
-    <!-- TemplateBeginEditable name="head" -->
-    <!-- TemplateEndEditable -->
-<!-- InstanceEndEditable -->
+    <!-- InstanceEndEditable -->
+
 </head>
   <body>
 	<div class="container">
     	<h1>Unsplash Photographer Spotlight</h1>
-	<!-- InstanceBeginEditable name="master-content" -->
+	
 <nav>
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
-    <!-- TemplateBeginEditable name="breadcrumb-trail" -->
+    <!-- InstanceBeginEditable name="breadcrumb-trail" -->
     <li class="breadcrumb-item active">Tom Sodoge</li>
-    <!-- TemplateEndEditable -->
+    <!-- InstanceEndEditable -->
   </ol>
 </nav>
   <div class="row">
@@ -41,11 +41,33 @@
       </div>
     </div>
     <div class="col-12 col-sm-6 col-md-9">
-	<!-- TemplateBeginEditable name="tom-sodoge-content" -->
-      <p>[Placeholder content.]</p>
-    <!-- TemplateEndEditable --></div>
+	<!-- InstanceBeginEditable name="tom-sodoge-content" -->
+      <p>Tom Sodoge's photos have an urban aesthetic. I like his photos because I love his take on everyday life.</p>
+	<div class="card-columns">
+		<div class="card"> <a href="photographs/hd-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542841791-1925b02a2bbb" alt="Timberland 45th Anniversary"></a>
+  		</div>
+		<div class="card"> <a href="photographs/hd-photo-2.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542841791-c3cc44abdbbb" alt="Timberland 45th Anniversary"></a>
+		</div>
+		<div class="card"> <a href="photographs/car-sunflare-tree-blue-sky.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1467204715934-f41e5605e64a" alt="Roofing, rooftop, roof and sky"></a>
+		</div>
+		<div class="card"> <a href="photographs/ocean-adventure-sunset-wave.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1459587043191-cdd6cd6d8225" alt="Color, colour, composition and sky"></a>
+		</div>
+		<div class="card"> <a href="photographs/wine-over-water.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1457968867385-9f877f3f2bce" alt="Sneakers on black cubes"></a>
+		</div>
+		<div class="card"> <a href="photographs/cat-eye-half-leopard-half-cat.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1453641719371-8d31b45499a6" alt="Street, building, shop and couple"></a>
+		</div>
+		<div class="card"> <a href="photographs/sunglass-summer-relaxing-drink.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1451523217094-c60a00eda8c1" alt="Photographing a skyscraper"></a>
+		</div>
+		<div class="card"> <a href="photographs/pastel-hearts.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1451256656121-9ffc0c898a49" alt="Mens red Nike shoes"></a>
+		</div>
+		<div class="card"> <a href="photographs/my-girls.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1446481707098-d2b1920a55b1" alt="Jungle, concrete, art and street"></a>
+		</div>
+		<div class="card"> <a href="photographs/working-from-home.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1446481899432-9ff9f3ed75c2" alt="Lens, phone, the and trough"></a>
+		</div>
+	</div>
+    <!-- InstanceEndEditable --></div>
   </div>
-  <!-- InstanceEndEditable -->
+  
 	<div class="row">
 		<div class="col-12 col-sm-6">
 		Made with [love] and [coffee] by Ali Magnani
