Created Tom Sodoge Detail Page 9

--- a/tom sodoge/photographs/jungle-concrete-art-and-street.html
+++ b/tom sodoge/photographs/jungle-concrete-art-and-street.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Unsplash - Tom Sodoge</title>
+<title>Tom Sodoge - Jungle, concrete, art and street</title>
 <!-- InstanceEndEditable -->
     
     <!-- InstanceBeginEditable name="head" -->
@@ -21,9 +21,10 @@
 	
 <nav>
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-    <li class="breadcrumb-item active">Tom Sodoge</li>
+    <li class="breadcrumb-item"><a href="../index.html">Tom Sodoge</a></li>
+	<li class="breadcrumb-item active">Jungle, concrete, art and street</li>
     <!-- InstanceEndEditable -->
   </ol>
 </nav>
@@ -42,29 +43,89 @@
     </div>
     <div class="col-12 col-sm-6 col-md-9">
 	<!-- InstanceBeginEditable name="tom-sodoge-content" -->
-      <p>Tom Sodoge's photos have an urban aesthetic. I like his photos because I love his take on everyday life.</p>
-	<div class="card-columns">
-		<div class="card"> <a href="photographs/timberland-45-anniversary.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542841791-1925b02a2bbb" alt="Timberland 45th Anniversary"></a>
-  		</div>
-		<div class="card"> <a href="photographs/timberland-45-anniversary-2.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542841791-c3cc44abdbbb" alt="Timberland 45th Anniversary"></a>
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Photo Info
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Jungle, concrete, art and street</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+		<p>Published on November 2, 2015</p>
+		<div class="row">
+		  <div class="col-12 col-sm-3">
+			<div class="card">
+    			<img class="card-img-top" src="https://images.unsplash.com/photo-1446481707098-d2b1920a55b1" alt="Jungle, concrete, art and street">
+			</div>
+		  </div>
+		  <div class="col-12 col-sm-9">
+			<div class="row">
+		  	<dl class="col-4">
+				<dt>Views</dt>
+				<dd><strong>12,652</strong></dd>
+				<dd>+945 since last month</dd>
+		  	</dl>
+		  	<dl class="col-4">
+				<dt>Downloads</dt>
+				<dd><strong>426</strong></dd>
+				<dd>+10 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Likes</dt>
+				<dd><strong>14</strong></dd>
+				<dd>+2 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Make</dt>
+				<dd>Canon</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Model</dt>
+				<dd>Canon EOS 1200D</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Focal Length</dt>
+				<dd>50.0mm</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Aperture</dt>
+				<dd>ƒ/1.8</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Shutter Speed</dt>
+				<dd>1/400s</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>ISO</dt>
+				<dd>400</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Dimensions</dt>
+				<dd>5184 × 3456</dd>
+		  	</dl>
+			</div>
+		  </div>
 		</div>
-		<div class="card"> <a href="photographs/roofing-rooftop-roof-and-sky.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1467204715934-f41e5605e64a" alt="Roofing, rooftop, roof and sky"></a>
-		</div>
-		<div class="card"> <a href="photographs/color-colour-composition-and-sky.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1459587043191-cdd6cd6d8225" alt="Color, colour, composition and sky"></a>
-		</div>
-		<div class="card"> <a href="photographs/sneakers-on-black-cubes.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1457968867385-9f877f3f2bce" alt="Sneakers on black cubes"></a>
-		</div>
-		<div class="card"> <a href="photographs/street-building-shop-and-couple.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1453641719371-8d31b45499a6" alt="Street, building, shop and couple"></a>
-		</div>
-		<div class="card"> <a href="photographs/photographing-a-skyscraper.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1451523217094-c60a00eda8c1" alt="Photographing a skyscraper"></a>
-		</div>
-		<div class="card"> <a href="photographs/mens-red-nike-shoes.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1451256656121-9ffc0c898a49" alt="Mens red Nike shoes"></a>
-		</div>
-		<div class="card"> <a href="photographs/jungle-concrete-art-and-street.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1446481707098-d2b1920a55b1" alt="Jungle, concrete, art and street"></a>
-		</div>
-		<div class="card"> <a href="photographs/working-from-home.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1446481899432-9ff9f3ed75c2" alt="Lens, phone, the and trough"></a>
-		</div>
-	</div>
+      </div> 
+      <div class="modal-footer">
+		<a href="https://unsplash.com/photos/wfrJRv1oqt4" target="_blank">Photo Source</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>		
+<h2>Jungle, concrete, art and street</h2>
+	<p>I like this photo because of the fall leaves in the background. The additional darkness of the figure adds a spooky quality to the photo which is a bit intriguing.</p>
+<div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1446481707098-d2b1920a55b1" alt="Jungle, concrete, art and street">
+</div>
     <!-- InstanceEndEditable --></div>
   </div>
   
