Created Annie Spratt Template and Page

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 </div>
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="https://images.unsplash.com/profile-1542598327357-0236ff086caf?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Brooke Cagle">
+    <img class="card-img-top" src="https://images.unsplash.com/profile-1508107410047-a34950174b6b?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Annie Spratt">
     <div class="card-body">
-      <h5 class="card-title">Brooke Cagle</h5>
-      <p class="card-text">Designer/Photographer + Avid Dreamer + World Traveler.</p>
-	  <a href="#">Photo Gallery</a>
+      <h5 class="card-title">Annie Spratt</h5>
+      <p class="card-text">Hello, I'm Annie from the Unsplash Team and I gift 10 new photos daily - enjoy!</p>
+	  <a href="annie-spratt/index.html">Photo Gallery</a>
     </div>
   </div>
   <div class="card">
