Created Annie Spratt Detail Page 4

--- a/annie-spratt/photographs/windswept-redhead.html
+++ b/annie-spratt/photographs/windswept-redhead.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Unsplash - Annie Spratt</title>
+<title>Annie Spratt - Windswept redhead</title>
 <!-- InstanceEndEditable -->
     
     <!-- InstanceBeginEditable name="head" -->
@@ -21,9 +21,10 @@
 	
 <nav>
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-    <li class="breadcrumb-item active">Annie Spratt</li>
+    <li class="breadcrumb-item"><a href="../index.html">Annie Spratt</a></li>
+	<li class="breadcrumb-item active">Windswept redhead</li>
     <!-- InstanceEndEditable -->
   </ol>
 </nav>
@@ -43,29 +44,89 @@
     </div>
     <div class="col-12 col-sm-6 col-md-9">
 	<!-- InstanceBeginEditable name="annie-spratt-content" -->
-      <p>Annie Spratt is a photographer from the Unsplash team. Based in the UK, her work is unbelievably gorgeous.</p>
-	<div class="card-columns">
-		<div class="card"> <a href="photographs/hd-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543690261-5776bed580fb" alt="HD photo"></a>
-  		</div>
-		<div class="card"> <a href="photographs/hd-photo-2.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543689604-6fe8dbcd1f59" alt="HD photo"></a>
+       <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Photo Info
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Windswept redhead</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+		<p>Published on November 30, 2018</p>
+		<div class="row">
+		  <div class="col-12 col-sm-3">
+			<div class="card">
+    			<img class="card-img-top" src="https://images.unsplash.com/photo-1543554920-ad3683dc40d8" alt="Windswept redhead">
+			</div>
+		  </div>
+		  <div class="col-12 col-sm-9">
+			<div class="row">
+		  	<dl class="col-4">
+				<dt>Views</dt>
+				<dd><strong>2,070</strong></dd>
+				<dd>+1,902 since last month</dd>
+		  	</dl>
+		  	<dl class="col-4">
+				<dt>Downloads</dt>
+				<dd><strong>12</strong></dd>
+				<dd>+9 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Likes</dt>
+				<dd><strong>2</strong></dd>
+				<dd>+1 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Make</dt>
+				<dd>SONY</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Model</dt>
+				<dd>ILCE-7RM3</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Focal Length</dt>
+				<dd>85.0mm</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Aperture</dt>
+				<dd>ƒ/1.4</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Shutter Speed</dt>
+				<dd>1/1250s</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>ISO</dt>
+				<dd>100</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Dimensions</dt>
+				<dd>7952 × 5304</dd>
+		  	</dl>
+			</div>
+		  </div>
 		</div>
-		<div class="card"> <a href="photographs/christmas-bauble-and-bokeh.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543588978-fad7bfb4b664" alt="Christmas bauble and bokeh"></a>
-		</div>
-		<div class="card"> <a href="photographs/windswept-redhead.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543554920-ad3683dc40d8" alt="Windswept redhead"></a>
-		</div>
-		<div class="card"> <a href="photographs/sneakers-on-black-cubes.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543470366-01327539f26a" alt="Artic Iceberg, reflected"></a>
-		</div>
-		<div class="card"> <a href="photographs/street-building-shop-and-couple.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543250916-f1f6f91d9043" alt="Flynn the greyhound"></a>
-		</div>
-		<div class="card"> <a href="photographs/photographing-a-skyscraper.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543128195-d7ec6d7c56af" alt="HD photo"></a>
-		</div>
-		<div class="card"> <a href="photographs/mens-red-nike-shoes.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543068755-56b3a329621c" alt="Polaroid camera, rainbow, first camera"></a>
-		</div>
-		<div class="card"> <a href="photographs/jungle-concrete-art-and-street.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1541779331458-356430a2caf4" alt="Young cows in the New Forest"></a>
-		</div>
-		<div class="card"> <a href="photographs/lens-phone-the-and-trough.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1541689589658-29d56a5cdedb" alt="Bokeh heart above a hot drink"></a>
-		</div>
-	</div>
+      </div> 
+      <div class="modal-footer">
+		<a href="https://unsplash.com/photos/XBmNKdVb_Ts" target="_blank">Photo Source</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>		
+<h2>Windswept redhead</h2>
+	<p>I like this photo because of the pose and the camera angle. It truly makes for an intriguing photo.</p>
+<div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1543554920-ad3683dc40d8" alt="Windswept redhead">
+</div>
     <!-- InstanceEndEditable --></div>
   </div>
   
