Created Ben Klea Page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="card-body">
       <h5 class="card-title">Ben Klea</h5>
       <p class="card-text">Love to see the world with my family!</p>
-	  <a href="#">Photo Gallery</a>
+	  <a href="ben-klea/index.html">Photo Gallery</a>
     </div>
   </div>
   <div class="card">
