Created Ben Klea Detail Page 4

--- a/ben-klea/photographs/sunrise-at-yant-flat.html
+++ b/ben-klea/photographs/sunrise-at-yant-flat.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Ben Klea - Dark Skies over Dettifoss</title>
+<title>Ben Klea - Sunrise at Yant Flat</title>
 <!-- InstanceEndEditable -->
     
     <!-- InstanceBeginEditable name="head" -->
@@ -24,7 +24,7 @@
     <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <!-- InstanceBeginEditable name="breadcrumb-trail" -->
     <li class="breadcrumb-item"><a href="../index.html">Ben Klea</a></li>
-    <li class="breadcrumb-item active">Dark Skies over Dettifoss</li>
+    <li class="breadcrumb-item active">Sunrise at Yant Flat</li>
     <!-- InstanceEndEditable -->
   </ol>
 </nav>
@@ -51,35 +51,35 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Dark Skies over Dettifoss</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Sunrise at Yant Flat</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-		<p>Published on November 25, 2018</p>
+		<p>Published on November 16, 2018</p>
 		<div class="row">
 		  <div class="col-12 col-sm-3">
 			<div class="card">
-    			<img class="card-img-top" src="https://images.unsplash.com/photo-1543187972-28f213231cbe" alt="Dark Skies over Dettifoss">
+    			<img class="card-img-top" src="https://images.unsplash.com/photo-1542345474-cdaecb9f3e87" alt="Sunrise at Yant Flat">
 			</div>
 		  </div>
 		  <div class="col-12 col-sm-9">
 			<div class="row">
 		  	<dl class="col-4">
 				<dt>Views</dt>
-				<dd><strong>62,036</strong></dd>
-				<dd>+58,943 since last month</dd>
+				<dd><strong>153,039</strong></dd>
+				<dd>+151,330 since last month</dd>
 		  	</dl>
 		  	<dl class="col-4">
 				<dt>Downloads</dt>
-				<dd><strong>295</strong></dd>
-				<dd>+287 since last month</dd>
+				<dd><strong>1,018</strong></dd>
+				<dd>+1,013 since last month</dd>
 		  	</dl>
 			<dl class="col-4">
 				<dt>Likes</dt>
-				<dd><strong>22</strong></dd>
-				<dd>+21 since last month</dd>
+				<dd><strong>72</strong></dd>
+				<dd>+72 since last month</dd>
 		  	</dl>
 			<dl class="col-4">
 				<dt>Camera Make</dt>
@@ -107,23 +107,23 @@
 		  	</dl>
 			<dl class="col-4">
 				<dt>Dimensions</dt>
-				<dd>2478 × 3097</dd>
+				<dd>4000 × 5000</dd>
 		  	</dl>
 			</div>
 		  </div>
 		</div>
       </div> 
       <div class="modal-footer">
-		<a href="https://unsplash.com/photos/riYHREPY7io" target="_blank">Photo Source</a>
+		<a href="https://unsplash.com/photos/jSEEU7QyzaA" target="_blank">Photo Source</a>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
 </div>		
-<h2>Dark Skies over Dettifoss</h2>
-	<p>I like this photo because of the way the camera captures the water. It's almost as if you can hear the falls.</p>
+<h2>Sunrise at Yant Flat</h2>
+	<p>I like this photo because of the way the sun is captured. It reminds me of a retreat somewhere in the desert.</p>
 <div class="card">
-    <img class="card-img-top" src="https://images.unsplash.com/photo-1543187972-28f213231cbe" alt="Dark Skies over Dettifoss">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1542345474-cdaecb9f3e87" alt="Sunrise at Yant Flat">
 </div>
     <!-- InstanceEndEditable --></div>
   </div>
