Created Ben Klea Detail Page 6

--- a/ben-klea/photographs/zabriskie-point-at-dawn.html
+++ b/ben-klea/photographs/zabriskie-point-at-dawn.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Unsplash - Ben Klea</title>
+<title>Ben Klea - Zabriskie Point at Dawn</title>
 <!-- InstanceEndEditable -->
     
     <!-- InstanceBeginEditable name="head" -->
@@ -21,9 +21,10 @@
 	
 <nav>
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="../index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
     <!-- InstanceBeginEditable name="breadcrumb-trail" -->
-    <li class="breadcrumb-item active">Ben Klea</li>
+    <li class="breadcrumb-item"><a href="../index.html">Ben Klea</a></li>
+    <li class="breadcrumb-item active">Zabriskie Point at Dawn</li>
     <!-- InstanceEndEditable -->
   </ol>
 </nav>
@@ -41,29 +42,89 @@
     </div>
     <div class="col-12 col-sm-6 col-md-9">
 	<!-- InstanceBeginEditable name="ben-klea-content" -->
-      <p>I find Ben Klea's work inspiring. He is a featured photographer because his images are beautiful and represent places I wish to travel.</p>
-	<div class="card-columns">
-		<div class="card"> <a href="photographs/lake-crescent-dawn.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543551767-179ca0378a7a" alt="Lake Crescent Dawn"></a>
-  		</div>
-		<div class="card"> <a href="photographs/moraine-lake-clouds.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543373894-5e1d9d237f41" alt="Moraine Lake Clouds"></a>
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Photo Info
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Zabriskie Point at Dawn</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+		<p>Published on November 13, 2018</p>
+		<div class="row">
+		  <div class="col-12 col-sm-3">
+			<div class="card">
+    			<img class="card-img-top" src="https://images.unsplash.com/photo-1542067519-a9dd6ea4df2f" alt="Zabriskie Point at Dawn">
+			</div>
+		  </div>
+		  <div class="col-12 col-sm-9">
+			<div class="row">
+		  	<dl class="col-4">
+				<dt>Views</dt>
+				<dd><strong>162,248</strong></dd>
+				<dd>+158,625 since last month</dd>
+		  	</dl>
+		  	<dl class="col-4">
+				<dt>Downloads</dt>
+				<dd><strong>1,119</strong></dd>
+				<dd>+1,079 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Likes</dt>
+				<dd><strong>49</strong></dd>
+				<dd>+48 since last month</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Make</dt>
+				<dd>--</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Camera Model</dt>
+				<dd>--</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Focal Length</dt>
+				<dd>--</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Aperture</dt>
+				<dd>--</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Shutter Speed</dt>
+				<dd>--</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>ISO</dt>
+				<dd>--</dd>
+		  	</dl>
+			<dl class="col-4">
+				<dt>Dimensions</dt>
+				<dd>5385 × 3585</dd>
+		  	</dl>
+			</div>
+		  </div>
 		</div>
-		<div class="card"> <a href="photographs/dark-skies-over-dettifoss.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1543187972-28f213231cbe" alt="Dark Skies over Dettifoss"></a>
-		</div>
-		<div class="card"> <a href="photographs/sunrise-at-yant-flat.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542345474-cdaecb9f3e87" alt="Sunrise at Yant Flat"></a>
-		</div>
-		<div class="card"> <a href="photographs/picture-lake-dawn.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542345473-bce6a38acbec" alt="Picture Lake Dawn"></a>
-		</div>
-		<div class="card"> <a href="photographs/zabriskie-point-at-dawn.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542067519-a9dd6ea4df2f" alt="Zabriskie Point at Dawn"></a>
-		</div>
-		<div class="card"> <a href="photographs/sunglass-summer-relaxing-drink.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1542067519-6cd1e217df2d" alt="Car, tent, night and light"></a>
-		</div>
-		<div class="card"> <a href="photographs/pastel-hearts.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1541469953147-89dbf3c7ffe1" alt="Cascades on Little Pigeon River"></a>
-		</div>
-		<div class="card"> <a href="photographs/my-girls.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1541554376742-e3cfa77f16fd" alt="First Light on Tetons"></a>
-		</div>
-		<div class="card"> <a href="photographs/working-from-home.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1540252523854-e2aea61fc5b3" alt="Wahclella Falls"></a>
-		</div>
-	</div>
+      </div> 
+      <div class="modal-footer">
+		<a href="https://unsplash.com/photos/Rg5IMhA0e2g" target="_blank">Photo Source</a>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>		
+<h2>Zabriskie Point at Dawn</h2>
+	<p>I like this photo because of the colors.</p>
+<div class="card">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1542067519-a9dd6ea4df2f" alt="Zabriskie Point at Dawn">
+</div>
     <!-- InstanceEndEditable --></div>
   </div>
   
