Created Kelly Sikkema Page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="card-body">
       <h5 class="card-title">Kelly Sikkema</h5>
       <p class="card-text">Saved by grace + UX Design Manager + Hobby Photographer + Hand Letterer.</p>
-	  <a href="#">Photo Gallery</a>
+	  <a href="Kelly Sikkema/index.html">Photo Gallery</a>
     </div>
   </div>
 </div>
